fix: Postcard list spacing

--- a/sass/components/_postcard.scss
+++ b/sass/components/_postcard.scss
@@ -7,6 +7,7 @@
     border-radius: 12pt;
     margin: 2em;
     padding: 2em;
+    margin-top: 0;
 
     // use up the screen on phones
     @media (max-width: 768px) {
